# schema2classes

./: .gitignore  .pre-commit-config.yaml  LICENCE.txt  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build-publish.yml  lint-test.yml
dev/: build-shared.py  run.py
src/schema2classes/: __init__.py  app.py
src/schema2classes/common/: uri.py
src/schema2classes/generator/: generator.py
src/schema2classes/output/: base_outputs.py  dataclass_outputs.py  outputs.py  pydantic_outputs.py  validataclass_outputs.py
src/schema2classes/schema/: models.py
src/schema2classes/scripts/: build_shared.py  schema2classes.py
src/schema2classes/templates/: validataclass.jinja2
src/schema2validataclass/: _version.py  app.py  config.py
src/schema2validataclass/common/: helper.py
src/schema2validataclass/generator/: generator.py
src/schema2validataclass/output/: base_outputs.py  outputs.py  pydantic_outputs.py  validataclass_outputs.py
src/schema2validataclass/schema/: __init__.py  base_outputs.py  dataclass_outputs.py  models.py  outputs.py
src/schema2validataclass/scripts/: schema2validataclass.py
src/schema2validataclass/templates/: dataclass.jinja2  enum.jinja2  init.jinja2  pydantic.jinja2  validataclass.jinja2
tests/integration/: chained_schemas_test.py  helpers.py  list_reference_test.py  main_without_title_test.py  object_in_object_with_title_test.py  object_naming_test.py  patched_reference_test.py  simple_all_optional_test.py  simple_all_required_test.py  simple_default_string_test.py  simple_enum_test.py  simple_required_test.py  simple_title_description_test.py
tests/integration/dataclass/: chained_schemas_ignore_test.py  chained_schemas_list_ignore_test.py  chained_schemas_test.py  chained_schemas_unused_test.py  helpers.py  import_loops_in_lists_test.py  import_loops_test.py  list_reference_test.py  main_without_title_test.py  object_in_object_with_title_test.py  object_naming_test.py  patched_reference_test.py  renamed_properties_test.py  simple_all_optional_test.py  simple_all_required_test.py  simple_default_string_test.py  simple_enum_test.py  simple_formats_test.py  simple_required_test.py  simple_title_description_test.py
tests/integration/pydantic/: chained_schemas_ignore_test.py  chained_schemas_list_ignore_test.py  chained_schemas_test.py  chained_schemas_unused_test.py  helpers.py  import_loops_in_lists_test.py  import_loops_test.py  list_reference_test.py  main_without_title_test.py  object_in_object_with_title_test.py  object_naming_test.py  patched_reference_test.py  renamed_properties_test.py  (+7 more)
tests/unit/: array_test.py  base_field_test.py  boolean_test.py  datetime_test.py  email_test.py  enum_test.py  get_reference_base_uris_test.py  helpers.py  integer_test.py  number_test.py  object_get_objects_test.py  object_get_reference_base_uris_test.py  object_test.py  parse_schema_array_test.py  parse_schema_boolean_test.py  parse_schema_datetime_test.py  parse_schema_email_test.py  parse_schema_enum_test.py  parse_schema_integer_test.py  parse_schema_number_test.py  parse_schema_object_test.py  parse_schema_reference_test.py  parse_schema_required_test.py  parse_schema_string_test.py  parse_schema_time_test.py  parse_schema_unsupported_test.py  parse_schema_uri_test.py  reference_test.py  schema_definitions_test.py  schema_get_reference_base_uris_test.py  schema_with_object_test.py  schema_without_object_test.py  string_test.py  time_test.py  uri_test.py
(+49 files in other folders)
